--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>com.appdynamics.cloud.connectors</groupId>
     <artifactId>azure-connector-extension</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
     <name>azure-connector-extension</name>
     <url>http://maven.apache.org</url>
@@ -158,7 +158,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/azure-connector_v1/lib</outputDirectory>
+                            <outputDirectory>${project.build.directory}/azure-connector/lib</outputDirectory>
                             <overWriteReleases>false</overWriteReleases>
                             <overWriteSnapshots>false</overWriteSnapshots>
                             <overWriteIfNewer>true</overWriteIfNewer>
@@ -190,7 +190,7 @@
                         <phase>install</phase>
                         <configuration>
                             <target>
-                                <property name="target.dir" value="${build.directory}/azure-connector_v1"/>
+                                <property name="target.dir" value="${build.directory}/azure-connector"/>
                                 <mkdir dir="${target.dir}"/>
                                 <copy todir="${target.dir}">
                                     <fileset dir="src/main/content" includes="compute-center-types.xml"/>
@@ -200,8 +200,8 @@
                                 <copy todir="${target.dir}">
                                     <fileset dir="${build.directory}" includes="connector.${project.packaging}"/>
                                 </copy>
-                                <zip destfile="${target.dir}.zip">
-                                    <zipfileset dir="${target.dir}" filemode="755" prefix="azure_v1/"/>
+                                <zip destfile="${target.dir}-${project.version}.zip">
+                                    <zipfileset dir="${target.dir}" filemode="755" prefix="azure/"/>
                                 </zip>
                                 <delete dir="${target.dir}"/>
                             </target>
